Actualizacion Prueba Tecnica: Creacion de Propiedades Dtos

--- a/Mectronics.SistemaGestionTransporte.Tranversales/Mectronics.SistemaGestionTransporte.Tranversales.csproj
+++ b/Mectronics.SistemaGestionTransporte.Tranversales/Mectronics.SistemaGestionTransporte.Tranversales.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Dtos\" />
+    <Folder Include="Mapeos\AutoMapper\" />
   </ItemGroup>
 
   <ItemGroup>
