--- a/Mectronics.SistemaGestionTransporte.Tranversales/Mectronics.SistemaGestionTransporte.Tranversales.csproj
+++ b/Mectronics.SistemaGestionTransporte.Tranversales/Mectronics.SistemaGestionTransporte.Tranversales.csproj
@@ -6,10 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Mapeos\AutoMapper\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   </ItemGroup>
