Implementación funcionalidad gestionar Buses

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,15 @@
 /Mectronics.SistemaGestionTransporte/Mectronics.SistemaGestionTransporte.MS.EstadoBus/obj
 /Mectronics.SistemaGestionTransporte.Tranversales/obj
 /Mectronics.SistemaGestionTransporte.Repositorio/obj
+/Mectronics.SistemaGestionTransporte.MS.Bus/bin
+/Mectronics.SistemaGestionTransporte.MS.BusHorario/bin
+/Mectronics.SistemaGestionTransporte.MS.Conductor/bin
+/Mectronics.SistemaGestionTransporte.MS.Rol/bin
+/Mectronics.SistemaGestionTransporte.Servicio/bin
+/Mectronics.SistemaGestionTransporte/Mectronics.SistemaGestionTransporte.MS.ConductorHorario/bin
+/Mectronics.SistemaGestionTransporte/Mectronics.SistemaGestionTransporte.MS.Seguridad/bin
+/Mectronics.SistemaGestionTransporte/Mectronics.SistemaGestionTransporte.MS.EstadoConductor/bin
+/Mectronics.SistemaGestionTransporte/Mectronics.SistemaGestionTransporte.MS.Usuario/bin
+/Mectronics.SistemaGestionTransporte/Mectronics.SistemaGestionTransporte.MS.EstadoBus/bin
+/Mectronics.SistemaGestionTransporte.Tranversales/bin
+/Mectronics.SistemaGestionTransporte.Repositorio/bin
